# udpp

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: bin.rs  handler.rs  lib.rs  session.rs  snow_types.rs  transform.rs  transport.rs  veq.rs
src/dualstack/: bidir_socket.rs  dual_socket.rs  maybe_dual.rs  mod.rs  versioned_socket.rs
src/holepunch/: mod.rs  puncher.rs  punching.rs
src/ip_discovery/: mod.rs
src/proto/: bidirectional.rs  coordinator.rs  data.rs  handler.rs  handshake.rs  mod.rs  session.rs  socket.rs  structs.rs
