[package]
name = "veq"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

[lib]
name = "veq"
path = "src/lib.rs"

[[bin]]
name = "veq-cli"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.78"
base64 = "0.22.0"
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
crossbeam = "0.8"
log = "0.4.21"
pnet_datalink = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
snow = "0.9.6"
stunclient = "0.4.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "test-util"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
zstd = "0.13"
